--- a/iphone/UserLoginAndRegistration/UserLoginAndRegistration/Base.lproj/Main.storyboard
+++ b/iphone/UserLoginAndRegistration/UserLoginAndRegistration/Base.lproj/Main.storyboard
@@ -231,6 +231,9 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DDi-jf-FTX">
                                 <rect key="frame" x="20" y="434" width="280" height="30"/>
                                 <state key="normal" title="I have an account. Let me login."/>
+                                <connections>
+                                    <action selector="iHaveAnAccountButtonTapped:" destination="Edk-je-4vr" eventType="touchUpInside" id="iUw-NW-7gN"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
