--- a/iphone/UserLoginAndRegistration/UserLoginAndRegistration/Base.lproj/Main.storyboard
+++ b/iphone/UserLoginAndRegistration/UserLoginAndRegistration/Base.lproj/Main.storyboard
@@ -1,10 +1,50 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="m16-Dy-NuQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="T3a-hA-RUG">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
+        <!--Tab Bar Controller-->
+        <scene sceneID="b5p-cv-r0Q">
+            <objects>
+                <tabBarController id="T3a-hA-RUG" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="CPp-NY-a0M">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="jjm-oW-MfG"/>
+                        <segue destination="RKz-Mt-eJM" kind="relationship" relationship="viewControllers" id="gkK-MF-0k8"/>
+                        <segue destination="xgt-Ut-KOU" kind="relationship" relationship="viewControllers" id="Zhc-OM-f5G"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5RF-Hy-hHN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="416" y="223"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="vg9-Be-its">
+            <objects>
+                <viewController id="RKz-Mt-eJM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iAr-gY-geY"/>
+                        <viewControllerLayoutGuide type="bottom" id="Yst-J6-eu8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yic-GZ-Eeo">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="q1b-hL-eH0"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v9R-PB-i0Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="416" y="983"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="IcL-Jy-6nP">
             <objects>
@@ -24,6 +64,29 @@
             </objects>
             <point key="canvasLocation" x="983" y="969"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="ivb-zC-72s">
+            <objects>
+                <viewController id="xgt-Ut-KOU" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8Q0-mJ-jHS"/>
+                        <viewControllerLayoutGuide type="bottom" id="lhf-2n-q7G"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fWi-DT-kyF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="fzZ-il-EPx"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <segue destination="8JF-ou-TxM" kind="presentation" identifier="loginView" id="eQk-OD-22l"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TnO-4A-AZE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="983" y="-457"/>
+        </scene>
         <!--Menu-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -34,28 +97,28 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Product Cell" textLabel="Vra-rJ-2W0" detailTextLabel="OWC-Q2-qRv" imageView="ihx-UR-pdE" style="IBUITableViewCellStyleSubtitle" id="YDq-6o-UFH">
-                                <rect key="frame" x="0.0" y="86" width="320" height="60"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YDq-6o-UFH" id="BSg-Eg-W46">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="59.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="59"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Beef" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Vra-rJ-2W0">
-                                            <rect key="frame" x="109" y="14" width="33.5" height="19.5"/>
+                                            <rect key="frame" x="109" y="13" width="34" height="20"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="9.99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="OWC-Q2-qRv">
-                                            <rect key="frame" x="109" y="33.5" width="24" height="13.5"/>
+                                            <rect key="frame" x="109" y="33" width="24" height="14"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="IMG_0042.jpg" id="ihx-UR-pdE">
-                                            <rect key="frame" x="15" y="0.0" width="79" height="59.5"/>
+                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="Image" id="ihx-UR-pdE">
+                                            <rect key="frame" x="15" y="0.0" width="79" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </imageView>
                                     </subviews>
@@ -70,6 +133,7 @@
                             <outlet property="delegate" destination="BYZ-38-t0r" id="HO8-Yg-aPi"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Item" id="IgJ-xb-1wR"/>
                     <navigationItem key="navigationItem" title="Menu " id="pCD-zm-JlU" userLabel="Menu">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="92W-Fh-sjs">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="O4F-rE-cH5">
@@ -83,9 +147,6 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                    <connections>
-                        <segue destination="8JF-ou-TxM" kind="presentation" identifier="loginView" id="OvF-UZ-EHt"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -315,27 +376,8 @@
             </objects>
             <point key="canvasLocation" x="1488" y="969"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="OE6-yV-NSI">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="m16-Dy-NuQ" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3Be-SX-fiB">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="8Vx-pP-bfE"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ict-2g-we8" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="468" y="223"/>
-        </scene>
     </scenes>
     <resources>
-        <image name="IMG_0042.jpg" width="1280" height="960"/>
+        <image name="Image" width="640" height="480"/>
     </resources>
 </document>
